--- a/install/apache2/ppm.conf
+++ b/install/apache2/ppm.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName ppm.exemple.tld
+    ServerName ppm.altiup.ch
     DocumentRoot /opt/ppm/web
 
         # Log format config
