--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
 install-job-1:
     script:
-        - apt update
+        - apt update && apt dist-upgrade
+        - cd /tmp
+        - wget https://git.altiup.com/christophe.gherardi/ppm/-/raw/master/install-debian.sh
+        - chmod +x install-debian.sh
+        - ./install-debian.sh
