--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 install-job-1:
     script:
         - apt update && apt dist-upgrade -y
+        - apt install wget -y
         - cd /tmp
         - wget https://git.altiup.com/christophe.gherardi/ppm/-/raw/master/install-debian.sh
         - chmod +x install-debian.sh
