--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 install-job-1:
     script:
+        - apt-get install sudo
         - cd /builds/christophe.gherardi/ppm/
         - sudo ./install-debian.sh
