--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
 install-job-1:
     script:
+        - apt-get update && apt-get install -y wget
         - sh /builds/christophe.gherardi/ppm/install-debian.sh
