--- a/templates_install/apache2/ppm.conf
+++ b/templates_install/apache2/ppm.conf
@@ -12,21 +12,11 @@
                 Require all granted
         </Directory>
 
-        <Directory /opt/ppm/web/satis>
-                Options -Indexes
-                AllowOverride All
-                Require all granted
-        </Directory>
-
         # Needed aliases for satis
-        Alias /satis /opt/ppm/web/satis
-        Alias /include /opt/ppm/web/satis/include
-        Alias /dist /opt/ppm/web/satis/dist
+        Alias /include /opt/ppm/web/include
+        Alias /dist /opt/ppm/web/dist
  
         RewriteEngine on
-
-        # Push packages list to satis list to allow distribution files
-        RewriteRule ^/?(packages\.json)$ "/satis/$1" [R=301,L]
 
         # SSL
         #SSLEngine on
