--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 web/bundles/
-web/packages*.json
-web/p
-web/p2
-web/satis/
+web/packages.json
+web/dist/
+web/include/
 app/cache/*
 app/logs/*
 app/satis/satis.json
