--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,14 @@ web/bundles/
 web/packages.json
 web/dist/
 web/include/
+app/config/parameters.yml
+app/bootstrap*
 app/cache/*
 app/logs/*
 app/satis/satis.json
+app/satis/vendor/
+bin/
+build/
+vendor/
 .composer/
 .gitconfig
