--- a/templates_install/service/ppm-workers.service
+++ b/templates_install/service/ppm-workers.service
@@ -3,7 +3,6 @@ Description=Workers PPM
 After=redis-server.service
 
 [Service]
-Type=simple
 User=ppm
 Group=ppm
 WorkingDirectory=/opt/ppm
@@ -12,7 +11,8 @@ SyslogIdentifier=ppm-workers
 ExecStart=/opt/ppm/app/console packagist:run-workers
 ExecStop=
 
-Restart=on-failure
+Restart=always
+RestartSec=120
 
 [Install]
 WantedBy=multi-user.target
