--- a/app/satis/composer.json
+++ b/app/satis/composer.json
@@ -27,7 +27,7 @@
     "bin": ["bin/satis"],
     "require": {
         "php": "^7.3||^8.0",
-        "composer/composer": "^1.10.22",
+        "composer/composer": "1.10.23",
         "symfony/console": "^4.4||^5.0",
         "twig/twig": "^2.12||^3.0"
     },
